# MechanicsPrograms

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md
FEMSolve/: CMakeLists.txt
FEMSolve/models/: model1.txt  model2.txt
FEMSolve/src/: graphics.cpp  main.cpp  main.h  seqv.cpp  utils.h
FinitElem/: CMakeLists.txt
FinitElem/src/: main.cpp  matrix.cpp  model.h  seqv.h
FinitElem2/: CMakeLists.txt
FinitElem2/src/: Model.h  main.cpp  stdafx.h
FluidView/: CMakeLists.txt
FluidView/src/: main.cpp
HazeDyn/: CMakeLists.txt
HazeDyn/src/: HazeFunc.cpp  HazeFunc.h  main.cpp
MediaWave/: CMakeLists.txt
SimplexView/: CMakeLists.txt
SimplexView/src/: ContourPlot.cpp  ContourPlot.h  DescentEngine.h  Func.cpp  Func.h  GaussSEngine.cpp  GaussSEngine.h  Graph.cpp  Graph.h  RelaxationEngine.h  ScanEngine.cpp  ScanEngine.h  SearchEngine.cpp  Simplex.cpp  SimplexEngine.cpp  main.cpp
WaveView/: CMakeLists.txt
WaveView/src/: main.cpp
cmake/: 3rdparty.cmake  config.cmake  config.txt
models/: model.txt  model3.txt
src/FEMSolve/: CMakeLists.txt  FEM.cpp  FEM.h  GraphicsUtils.cpp  GraphicsUtils.h  LinAlgUtils.cpp  LinAlgUtils.h  MainWindow.cpp  MainWindow.h  ModelWidget.cpp  ModelWidget.h  graphics.h  icon32_xpm.h  main.cpp  model.cpp  model.h  modelwidget.cpp  modelwidget.h  pch.h  utils.cpp
src/FinitElem/: CMakeLists.txt  matrix.h  model.cpp  model.h  utils.cpp
src/FinitElem2/: CMakeLists.txt  Model.cpp
src/FluidView/: CMakeLists.txt  FluidModel.cpp  FluidModel.h  GraphWidget.cpp  GraphWidget.h  main.cpp  pch.h
src/GraphView/: CMakeLists.txt  GeometryUtils.cpp  GeometryUtils.h  GraphWidget.cpp  GraphWidget.h  OptimizationModel.cpp  OptimizationModel.h  main.cpp  pch.h
src/HazeDyn/: CMakeLists.txt  HazeFunc.h  main.cpp
src/MediaWave/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MathUtils.cpp  MathUtils.h  MediumModel.cpp  MediumModel.h  PlotWidget.cpp  PlotWidget.h  main.cpp  pch.h  pixmaps.h
src/SimplexView/: CMakeLists.txt  ContourPlot.cpp  ContourPlot.h  DescentEngine.cpp  DescentEngine.h  FuncUtils.cpp  FuncUtils.h  GaussSEngine.cpp  GaussSEngine.h  GraphUtils.cpp  GraphUtils.h  GraphWidget.cpp  GraphWidget.h  MainWindow.cpp  MainWindow.h  MathUtils.cpp  MathUtils.h  RelaxationEngine.cpp  RelaxationEngine.h  ScanEngine.cpp  ScanEngine.h  SearchEngine.cpp  SearchEngine.h  Simplex.cpp  Simplex.h  SimplexEngine.cpp  SimplexEngine.h  main.cpp  pch.h
src/WaveView/: CMakeLists.txt  SurfaceFunction.cpp  SurfaceFunction.h  WaveModel.cpp  WaveModel.h  WaveWidget.cpp  WaveWidget.h  WaveWindow.cpp  WaveWindow.h  main.cpp  pch.h
